# koe

./: CLAUDE.md  Cargo.toml  README.md  build.sh  config.toml
.claude/release-specs/: memory-foundation.md  transcription-history.md
.claude/skills/koe-dev/: SKILL.md
dictionaries/: default.toml  programming.toml
src/: audio.rs  config.rs  context.rs  daemon.rs  dbus.rs  dictionary.rs  hotkey.rs  input.rs  main.rs  sound.rs
src/ai/: claude.rs  mod.rs  ollama.rs
src/history/: mod.rs
src/ipc/: client.rs  mod.rs  server.rs
src/memory/: mod.rs
src/recognition/: mod.rs  openai_api.rs  whisper_local.rs
src/ui/: history_page.rs  indicator.rs  mod.rs  settings_window.rs  tray.rs
